Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>[To- Do]</title>
-        <link rel="icon" type="image/x-icon" href="c:\Users\masab\Downloads\image_2024-12-19_132851341-removebg-preview.png">
+        <link rel="icon" type="image/x-icon" href="C:\Users\masab\OneDrive\Documents\Desktop\favicon.ico">
     </head>
     <style>
         .menu {
