--- a/Learning Plan.html
+++ b/Learning Plan.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>[Learning Plan]</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\masab\OneDrive\Documents\Desktop\favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <style>
         .visionHeader {
