--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>[To- Do]</title>
-        <link rel="icon" type="image/x-icon" href="C:\Users\masab\OneDrive\Documents\Desktop\favicon.ico">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <style>
         .menu {
