--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -64,7 +64,7 @@ text-decoration-line: overline underline;
     <body>
         <div class="menu">
             <a href="https://qm-rr.github.io/masalp/Learning%20Plan.html">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
-            <a href="https://qm.rr.guthub.io/masalp/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
+            <a href="https://qm.rr.github.io/masalp/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
             <a href="file:///C:/Users/masab/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
             <a href="file:///C:/Users/masab/Learning%20Plan-%20ToDo.html">To- Do</a> /
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
