Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -69,10 +69,10 @@ th {
     </style>
     <body>
         <div class="menu">
-            <a href="file:///C:/Users/masab/Learning%20Plan.html" target="content">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
-            <a href="file:///C:/Users/masab/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
-            <a href="file:///C:/Users/masab/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
-            <a href="file:///C:/Users/masab/Learning%20Plan-%20ToDo.html">To- Do</a> /
+            <a href="https://masalp.net">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
+            <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
+            <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
+            <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
             <a href="https://imblaze.my.site.com/s/">ImBlaze</a>
