Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>[Goals]</title>
-        <link rel="icon" type="image/x-icon" href="c:\Users\masab\Downloads\image_2024-12-19_132851341-removebg-preview.png">
+        <link rel="icon" type="image/x-icon" href="favicon.ico">
     </head>
     <style>
     .Goals {
