Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -83,7 +83,7 @@ text-decoration-line: overline underline;
             <td>Make pages corresponding with my goals</td>
             <td>in progress</td>
             <td>high</td>
-            <td>early march ig</td>
+            <td>last week of feb.</td>
         </tr>
             <tr>
                 <td>Book Notes</td>
@@ -93,8 +93,8 @@ text-decoration-line: overline underline;
             </tr>
             <tr>
                 <td>PQQR Math Homework</td>
-                <td>not started</td>
-                <td>high</td>
+                <td>done</td>
+                <td>low</td>
                 <td>2025-1-24</td>
             </tr>
             <tr>
@@ -105,10 +105,16 @@ text-decoration-line: overline underline;
             </tr>
             <tr>
                 <td>Literary Analysis Essay Organizer</td>
-                <td>in progress</td>
-                <td>med</td>
+                <td>done</td>
+                <td>low</td>
                 <td>2025-02-03</td>
             </tr>
+		<tr>
+			<td>Literary Analysis Outline</td>
+			<td>done</td>
+			<td>low</td>
+			<td>2025-02-idk</td>
+		</tr>
         </table>
         <div class="reflectionHeader">
             <h2>Weekly Reflection</h2>
