Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -123,6 +123,10 @@ text-decoration-line: overline underline;
         <!--use the "date" class for the date-->
         <!--insert new entry here-->        
         <div class="reflection">
+		<div class="date">
+			<h3>2025-01-25</h3>
+		</div>
+			<p>This week, I had interviews on both Tuesday and Thursday, so I think that is evidence of growth in LTI. I also have an interview on the 4th, next Tuesday. I’m falling a bit behind on homework though, so I guess I’m gonna try to get that done tonight. </p>
             <div class="date">
                 <h3>2025-01-24</h3>
             </div>
