Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -124,6 +124,10 @@ text-decoration-line: overline underline;
         <!--insert new entry here-->        
         <div class="reflection">
 		<div class="date">
+			<h3>2025-02-07</h3>
+		</div>
+		<p>This week, I had 2 in- person interviews, and I requested 2 shadow days. I have had lots of growth in LTI, but I need more work on my project. I got a lot of homework done because of the snow days :)</p>
+		<div class="date">
 			<h3>2025-01-25</h3>
 		</div>
 			<p>This week, I had interviews on both Tuesday and Thursday, so I think that is evidence of growth in LTI. I also have an interview on the 4th, next Tuesday. I’m falling a bit behind on homework though, so I guess I’m gonna try to get that done tonight. </p>
