Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -8,6 +8,7 @@
     .Goals {
         text-align: center;
         text-decoration-line: overline underline;
+	    font-family="Arial"
     }
     td, th {
   border: 1px solid #000000;
