--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -8,7 +8,7 @@
     .Goals {
         text-align: center;
         text-decoration-line: overline underline;
-	    font-family="Arial"
+	    font-family: Arial, Helvetica, sans-serif;
     }
     td, th {
   border: 1px solid #000000;
