Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -69,7 +69,48 @@ body {background-color: #ffffff;
             <th>Shadow Day</th>
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
-        <tr>
+		<tr>
+		<td><a href="https://www.abossein.com/">Abossein Engineering</a></td>
+		<td>idk</td>
+		<td>Engineer</td>
+		<td>cservice@abossein.com</td>
+		<td>2025-02-11</td>
+		<td>no</td>
+		<td>no</td>
+		<td>no response</td>
+		</tr>
+        
+		<tr>
+			<td><a href="https://neudorferengineers.com/">Neudorfer Engineers</a></td>
+			<td>idk</td>
+			<td>Engineer</td>
+			<td>bneudorfer@neudorferengineers.com</td>
+			<td>2025-02-11</td>
+			<td>no</td>
+			<td>no</td>
+			<td>no response</td>
+		</tr>
+		<tr>
+			<td><a href="https://cplinc.com/">Coughlin Porter Lundeen</a></td>
+			<td>idk</td>
+			<td>Engineer</td>
+			<td>info@cplinc.com</td>
+			<td>2025-02-11</td>
+			<td>no</td>
+			<td>no</td>
+			<td>no response</td>
+		</tr>
+		<tr>
+			<td><a href="https://lpdengineering.com/">LPD Engineers</a></td>
+			td>idk</td>
+			<td>Engineer</td>
+			<td>info@lpdengineering.com</td>
+			<td>2025-02-11</td>
+			<td>no</td>
+			<td>no</td>
+			<td>no response</td>
+		</tr>
+		<tr>
             <td><a href="https://www.metrixeng.com/">Metrix Engineers</a></td>
             <td>Autumn Lockwood</td>
             <td>Marketing Coord & Office Manager</td>
