Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -102,7 +102,7 @@ body {background-color: #ffffff;
 		</tr>
 		<tr>
 			<td><a href="https://lpdengineering.com/">LPD Engineers</a></td>
-			td>idk</td>
+			<td>idk</td>
 			<td>Engineer</td>
 			<td>info@lpdengineering.com</td>
 			<td>2025-02-11</td>
