Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -117,7 +117,7 @@ body {background-color: #ffffff;
             <td>autumnl@metrixeng.com</td>
             <td>2025-01-28</td>
             <td>2025-02-06</td>
-            <td>tbd></td>
+            <td>tbd</td>
             <td></td>
         </tr>
         <tr>
