Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -245,7 +245,7 @@ body {background-color: #ffffff;
             <td><a href="https://duncansharpfilms.com">Duncan Sharp Films</a></td>
             <td>Duncan Sharp</td>
             <td>Filmmaker</td>
-            <td>duncan@duncansharpfilms.com/310-480-2753</td>
+            <td>duncan@duncansharpfilms.com<br>310-480-2753</td>
             <td>2024-11-06</td>
             <td>2024-11-21</td>
             <td>no</td>
