Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -167,7 +167,7 @@ body {background-color: #ffffff;
             <td>wmetz@king2fd.org</td>
             <td>2024-12-10</td>
             <td>2024-12-17</td>
-            <td>no shadow day :(</td>
+            <td>yes</td>
             <td></td>
         </tr>
         <tr>
