Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -70,6 +70,36 @@ body {background-color: #ffffff;
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
 		<tr>
+			<td>Seattle Fire Dept.</td>
+			<td>idk yet</td>
+			<td>Firefighter</td>
+			<td>FireChiefOffice@seattle.gov</td>
+			<td>2025-02-13</td>
+			<td>tbd</td>
+			<td>tbd</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>Renton Fire</td>
+			<td>idk yet</td>
+			<td>Firefighter</td>
+			<td>abarton@rentonrfa.org</td>
+			<td>2025-02-13</td>
+			<td>tbd</td>
+			<td>tbd</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>North Highline Fire District Station 18</td>
+			<td>idk yet</td>
+			<td>Firefighter</td>
+			<td>Office@northhighlinefd.org</td>
+			<td>2025-02-13</td>
+			<td>tbd</td>
+			<td>tbd</td>
+			<td></td>
+		</tr>
+		<tr>
 		<td><a href="https://www.abossein.com/">Abossein Engineering</a></td>
 		<td>idk</td>
 		<td>Engineer</td>
