Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -70,7 +70,7 @@ body {background-color: #ffffff;
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
 		<tr>
-			<td>Seattle Fire Dept.</td>
+			<td><a href="https://www.seattle.gov/fire">Seattle Fire Dept.</a></td>
 			<td>idk yet</td>
 			<td>Firefighter</td>
 			<td>FireChiefOffice@seattle.gov</td>
@@ -80,7 +80,7 @@ body {background-color: #ffffff;
 			<td></td>
 		</tr>
 		<tr>
-			<td>Renton Fire</td>
+			<td><a href="https://rentonrfa.com/">Renton Fire</a></td>
 			<td>idk yet</td>
 			<td>Firefighter</td>
 			<td>abarton@rentonrfa.org</td>
@@ -90,7 +90,7 @@ body {background-color: #ffffff;
 			<td></td>
 		</tr>
 		<tr>
-			<td>North Highline Fire District Station 18</td>
+			<td><a href="https://www.northhighlinefd.org/">North Highline Fire District Station 18</a></td>
 			<td>idk yet</td>
 			<td>Firefighter</td>
 			<td>Office@northhighlinefd.org</td>
