Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -72,7 +72,7 @@ body {background-color: #ffffff;
 		<tr>
 			<td><a href="https://www.seattle.gov/fire">Seattle Fire Dept.</a></td>
 			<td>idk yet</td>
-			<td>Firefighter</td>
+			<td>firefighter</td>
 			<td>FireChiefOffice@seattle.gov</td>
 			<td>2025-02-13</td>
 			<td>tbd</td>
@@ -82,7 +82,7 @@ body {background-color: #ffffff;
 		<tr>
 			<td><a href="https://rentonrfa.com/">Renton Fire</a></td>
 			<td>idk yet</td>
-			<td>Firefighter</td>
+			<td>firefighter</td>
 			<td>abarton@rentonrfa.org</td>
 			<td>2025-02-13</td>
 			<td>tbd</td>
@@ -92,7 +92,7 @@ body {background-color: #ffffff;
 		<tr>
 			<td><a href="https://www.northhighlinefd.org/">North Highline Fire District Station 18</a></td>
 			<td>idk yet</td>
-			<td>Firefighter</td>
+			<td>firefighter</td>
 			<td>Office@northhighlinefd.org</td>
 			<td>2025-02-13</td>
 			<td>tbd</td>
@@ -101,8 +101,8 @@ body {background-color: #ffffff;
 		</tr>
 		<tr>
 		<td><a href="https://www.abossein.com/">Abossein Engineering</a></td>
-		<td>idk</td>
-		<td>Engineer</td>
+		<td>no contacts</td>
+		<td>engineer</td>
 		<td>cservice@abossein.com</td>
 		<td>2025-02-11</td>
 		<td>no</td>
@@ -112,8 +112,8 @@ body {background-color: #ffffff;
         
 		<tr>
 			<td><a href="https://neudorferengineers.com/">Neudorfer Engineers</a></td>
-			<td>idk</td>
-			<td>Engineer</td>
+			<td>no contacts</td>
+			<td>engineer</td>
 			<td>bneudorfer@neudorferengineers.com</td>
 			<td>2025-02-11</td>
 			<td>no</td>
@@ -122,8 +122,8 @@ body {background-color: #ffffff;
 		</tr>
 		<tr>
 			<td><a href="https://cplinc.com/">Coughlin Porter Lundeen</a></td>
-			<td>idk</td>
-			<td>Engineer</td>
+			<td>no contacts</td>
+			<td>engineer</td>
 			<td>info@cplinc.com</td>
 			<td>2025-02-11</td>
 			<td>no</td>
@@ -133,7 +133,7 @@ body {background-color: #ffffff;
 		<tr>
 			<td><a href="https://lpdengineering.com/">LPD Engineers</a></td>
 			<td>idk</td>
-			<td>Engineer</td>
+			<td>engineer</td>
 			<td>info@lpdengineering.com</td>
 			<td>2025-02-11</td>
 			<td>no</td>
@@ -147,7 +147,7 @@ body {background-color: #ffffff;
             <td>autumnl@metrixeng.com</td>
             <td>2025-01-28</td>
             <td>2025-02-06</td>
-            <td>tbd</td>
+            <td>no :(</td>
             <td></td>
         </tr>
         <tr>
@@ -173,7 +173,7 @@ body {background-color: #ffffff;
         <tr>
             <td><a href="https://www.valorcivilengineeringpllc.com">Valor Civil Engineering</a></td>
             <td>Frank Marescalco</td>
-            <td>Engineer</td>
+            <td>engineer</td>
             <td>valorcivilengineering@hotmail.com</td>
             <td>2024-12-19</td>
             <td>2025-01-28</td>
@@ -182,8 +182,8 @@ body {background-color: #ffffff;
         </tr>
         <tr>
             <td><a href="https://www.harperengineering.com">Harper Engineering</a></td>
-            <td>idk they haven't responded yet</td>
-            <td>Engineer</td>
+            <td>no contacts</td>
+            <td>engineer</td>
             <td>sales@harperengineering.com</td>
             <td>2024-12-19</td>
             <td>no</td>
@@ -214,7 +214,7 @@ body {background-color: #ffffff;
         <tr>
             <td><a href="https://pssc.highlineschools.org">PSSC</a></td>
             <td>Taresa Herrmann</td>
-            <td>Office</td>
+            <td>office</td>
             <td>taresa.herrmann@highlineschools.org</td>
             <td>2024-12-10</td>
             <td>no interview</td>
@@ -274,7 +274,7 @@ body {background-color: #ffffff;
         <tr>
             <td><a href="https://duncansharpfilms.com">Duncan Sharp Films</a></td>
             <td>Duncan Sharp</td>
-            <td>Filmmaker</td>
+            <td>filmmaker</td>
             <td>duncan@duncansharpfilms.com<br>310-480-2753</td>
             <td>2024-11-06</td>
             <td>2024-11-21</td>
