Update Learning Plan- LTI.html

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -82,7 +82,7 @@ body {background-color: #ffffff;
 		<tr>
 			<td><a href="https://rentonrfa.com/">Renton Fire</a></td>
 			<td>idk yet</td>
-			<td>firefighter</td>
+			<td>fire marshal</td>
 			<td>abarton@rentonrfa.org</td>
 			<td>2025-02-13</td>
 			<td>tbd</td>
