Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -86,12 +86,6 @@ text-decoration-line: overline underline;
             <td>last week of feb.</td>
         </tr>
             <tr>
-                <td>Book Notes</td>
-                <td>done</td>
-                <td>low</td>
-                <td>2024-12-20</td>
-            </tr>
-            <tr>
                 <td>PQQR Math Homework</td>
                 <td>done</td>
                 <td>low</td>
@@ -103,14 +97,8 @@ text-decoration-line: overline underline;
                 <td>high</td>
                 <td>2025-01-24</td>
             </tr>
-            <tr>
-                <td>Literary Analysis Essay Organizer</td>
-                <td>done</td>
-                <td>low</td>
-                <td>2025-02-03</td>
-            </tr>
 		<tr>
-			<td>Literary Analysis Outline</td>
+			<td>Literary Analysis Body Paragraphs</td>
 			<td>done</td>
 			<td>low</td>
 			<td>2025-02-idk</td>
