--- a/Learning Plan- Java.html
+++ b/Learning Plan- Java.html
@@ -44,7 +44,7 @@
         </style>
         <body>
             <div class="menu">
-                <a href="https://masalp.net">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
+                <a href="https://masalp.net">Home</a> /
                 <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
                 <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
                 <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
