Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -101,7 +101,7 @@ th {
             <td>Learn Java</td>
             <td>I wanna be a programmer, or at least <br>have knowledge about programming at robotics.</td>
             <td>no real timeframe</td>
-            <td>linkk</td>
+            <td><a href="https://masalp.net/Learning%20Plan-%20Java.html">linkk</a></td>
             <td>/qr//er//comms//sr//pq/</td>
             <td>low</td>
         </tr>
