Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -109,7 +109,7 @@ th {
             <td>Japanese</td>
             <td>I take the Japanese language seminar, along with doing Anki flashcards</td>
             <td>baller</td>
-            <td>:]</td>
+            <td><a href="https://masalp.net/Learning%20Plan-%20Japanese.html">Japanese</a>a></td>
             <td>/comms//pq//sr/</td>
             <td>med</td>
         </tr>
