Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -37,7 +37,7 @@ th {
 	margin-top: 24px;
     font-size: smaller;
 }
-.a {
+.menu a {
 	color: blue;
 } 
 .goals{
@@ -67,6 +67,9 @@ th {
   border: 1px solid black;
   padding: 0px;
 }
+	    a {
+		    color: blue;
+	    }
     </style>
     <body>
         <div class="menu">
