Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -128,7 +128,7 @@ th {
             <td>Math- Tutoring</td>
             <td>i don't think the math class is challenging enough. i want be as good as tak</td>
             <td>forever cursed</td>
-            <td>work in prog.</td>
+            <td><a href="https://masalp.net/Learning%20Plan-%20Math.html">Math</a></td>
             <td>/qr//pq/</td>
             <td>low</td>
         </tr>
