Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -120,7 +120,7 @@ th {
             <td>Robotics</td>
             <td>I'm part of a <i>FIRST</i> robotics club</td>
             <td>Jan. - undefined</td>
-            <td></td>
+            <td><a href="https://masalp.net/Learning%20Plan-%20Java.html">Robotics</a></td>
             <td>/qr//er//comms//pq/</td>
             <td>med</td>
         </tr>
