Update Learning Plan- Math.html

--- a/Learning Plan- Math.html
+++ b/Learning Plan- Math.html
@@ -57,7 +57,7 @@
                 <div class="aboutHeader">
 <h3>About</h3>
                 </div>
-                <p>I want to get to a point where I can talk to Takeshi about math on the same level as him. Now this is not just a goal to get better at math, I am also trying to be better about getting along with Takeshi. Right now, I’m doing tutoring, so I’m already done with the first step. This isn’t a goal that I’m particularly excited about, but I think it is important. </p>
+                <p>I want to get to a point where I can talk to Takeshi about math on the same level as him. Now this is not just a goal to get better at math, I am also trying to be better about getting along with Takeshi. Right now, I’m doing tutoring, so I’m already done with the first step. This isn’t a goal that I’m particularly excited about, but I think it is important. I also am getting a lot of homework, so hopefully improvement comes soon.</p>
                 <div class="list"><ul>
                     <li>Tutoring</li>
                     <li>Math</li>
