--- a/index.html
+++ b/index.html
@@ -63,10 +63,7 @@
   padding: 0px;
 }
     </style>
-    <body <!-- SCM Music Player https://www.scmplayer.net -->
-      <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
-      data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':true,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Backlight','url':'https://music.youtube.com/watch?v=vHfAjfKVMew&si=4Oz17uLRuXJG_KRn'},{'title':'Dramaturgy','url':'https://music.youtube.com/watch?v=dEfl-ObuapA&si=BGFZ1dp5EmJI5AbS'},{'title':'Fightsong','url':'https://music.youtube.com/watch?v=Pm_q0ACjP_k&si=tcQip9q3vcaggYrp'},{'title':'Here Comes The Sun','url':'https://music.youtube.com/watch?v=xUNqsfFUwhY&si=RXjVO0fCBTEGmv3m'},{'title':'Hey Jude','url':'https://music.youtube.com/watch?v=mQER0A0ej0M&si=qtPeG3Qw0wjEdRD1'},{'title':'Kaikai Kitan','url':'https://music.youtube.com/watch?v=isY3rtuSsK8&si=0_X3o3Jfq-Ii9ASh'},{'title':'Last Dance','url':'https://music.youtube.com/watch?v=HaOz1PhGXhs&si=w5dzJNH1zzJC6NnG'},{'title':'New Genesis','url':'https://music.youtube.com/watch?v=ViOzYSYWCMM&si=9K5MQ9HHhX8Id98c'},{'title':'Show','url':'https://music.youtube.com/watch?v=vwZAqxL8rgs&si=DKTarF7D1PnIUPW0'},{'title':'Strawberry Fields Forever','url':'https://music.youtube.com/watch?v=10LSq_J5ol4&si=GRLhxlMPUlwgNuxU'},{'title':'Usseewa','url':'https://music.youtube.com/watch?v=GtPLYvYeZ_4&si=m7okC7kWR5REwQ6d'}]}" ></script>
-      <!-- SCM Music Player script end -->>
+    <body>
         <div class="menu">
            <a href="https://masalp.net">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
             <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
