Update Learning Plan- ToDo.html

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -88,7 +88,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             </tr>
             <tr>
             <td>Make pages corresponding with my goals</td>
-            <td>in progress</td>
+            <td>done</td>
             <td>high</td>
             <td>last week of feb.</td>
         </tr>
