--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   background-color: white;
   padding: 7px;
 }
+	    /*when making a new page, copy- start here*/
 .menu {
 	text-align: center;
 	margin-bottom: 24px;
@@ -31,6 +32,7 @@
 .menu a {
 	color: blue;
 }
+	    /*when making a new page, copy- end here*/
 .shortTerm {  background-color: blanchedalmond;
   border: 1px solid black;
   padding: 0px;
@@ -63,25 +65,26 @@
   padding: 0px;
 }
     </style>
+	<!--when making a new page, copy- start here-->
     <body>
         <div class="menu">
-           <a href="https://masalp.net">Home</a> /<!--once i publish it, change url to the published page instead of my C: drive-->
+           <a href="https://masalp.net">Home</a> /
             <a href="https://masalp.net/Learning%20Plan-%20Goals.html" target="content">Goals</a> /
             <a href="https://masalp.net/Learning%20Plan-%20LTI.html" target="content">LTI</a> /
             <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
             <a href="https://imblaze.my.site.com/s/">ImBlaze</a>
-            
+            </div>
 <!-- SCM Music Player https://www.scmplayer.net -->
 <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
 data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffle':false,'repeat':1,'placement':'bottom','showplaylist':false,'playlist':[{'title':'Backlight','url':'https://music.youtube.com/watch?v=vHfAjfKVMew&si=4Oz17uLRuXJG_KRn'},{'title':'Dramaturgy','url':'https://music.youtube.com/watch?v=dEfl-ObuapA&si=BGFZ1dp5EmJI5AbS'},{'title':'Elliot P','url':'https://www.youtube.com/watch?v=NEajkPbi1ks'},{'title':'Fightsong','url':'https://music.youtube.com/watch?v=Pm_q0ACjP_k&si=tcQip9q3vcaggYrp'},{'title':'Here Comes The Sun','url':'https://music.youtube.com/watch?v=xUNqsfFUwhY&si=RXjVO0fCBTEGmv3m'},{'title':'Hey Jude','url':'https://music.youtube.com/watch?v=mQER0A0ej0M&si=qtPeG3Qw0wjEdRD1'},{'title':'Kaikai Kitan','url':'https://music.youtube.com/watch?v=isY3rtuSsK8&si=0_X3o3Jfq-Ii9ASh'},{'title':'Last Dance','url':'https://music.youtube.com/watch?v=WFRB9zl8tS8&si=yDWfVJCDt77SRD3v'},{'title':'New Genesis','url':'https://music.youtube.com/watch?v=ViOzYSYWCMM&si=9K5MQ9HHhX8Id98c'},{'title':'Show','url':'https://music.youtube.com/watch?v=vwZAqxL8rgs&si=DKTarF7D1PnIUPW0'},{'title':'Strawberry Fields Forever','url':'https://music.youtube.com/watch?v=10LSq_J5ol4&si=GRLhxlMPUlwgNuxU'},{'title':'Usseewa','url':'https://music.youtube.com/watch?v=GtPLYvYeZ_4&si=m7okC7kWR5REwQ6d'}]}" ></script>
 <!-- SCM Music Player script end -->
+<!--when making a new page, copy- end here-->
 
 
 
-
-        </div>
+        
         <div class="homeHeader"><h2>Home</h2></div>
         <div class="aboutMe">
             <div class="aboutMeHeader"><h3>About Me</h3></div><p>My name is Masa. I am a 101 at Big Picture High School in Burien, WA. I am a member of FRC 3574 (High Tekerz), I do Taiko and I also do judo at Budokan Dojo in Seattle International Dist. My interests include Japanese, firefighting, animation, aerospace engineering, and programming (although this is my first time using any sort of coding language). I enjoy playing video games, doing balance sports, and hanging out with my family and friends. I (ironically) don't enjoy math, losing, uhhh... I don't really hate that many things ig. A cool fact about me is that my left femur is reenforced with a steel rod due to a judo incedent. As you can probably tell, this is my learning plan, meant to help me keep up with projects and goals. Previously, I was using Coda (btw i highly reccomend), but when I saw one of my classmates coding their own website for their Learning Plan, I noticed how well my interests lined up with it and I had to give it a try.</p></div>
