Update Learning Plan- Goals.html

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -112,7 +112,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td>no real timeframe</td>
             <td><a href="https://masalp.net/Learning%20Plan-%20Java.html">linkk</a></td>
             <td>/qr//er//comms//sr//pq/</td>
-            <td>low</td>
+            <td>high</td>
         </tr>
         <tr>
             <td>Japanese</td>
@@ -136,7 +136,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td>forever cursed</td>
             <td><a href="https://masalp.net/Learning%20Plan-%20Math.html">Math</a></td>
             <td>/qr//pq/</td>
-            <td>low</td>
+            <td>high</td>
         </tr>
     </table>
     <br>
