lti contact name update

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -88,7 +88,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 		</tr>
 		<tr>
 			<td><a href="https://rentonrfa.com/">Renton Fire</a></td>
-			<td>idk yet</td>
+			<td>Anjela Barton</td>
 			<td>fire marshal</td>
 			<td>abarton@rentonrfa.org</td>
 			<td>2025-02-13</td>
