--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -77,7 +77,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
             <a href="https://imblaze.my.site.com/s/">ImBlaze</a>
-            <a href="https://drive.google.com/drive/u/0/folders/1mgMGFCZ3GzGM6WVZdS1J3kWbnEl_OQT1">Digital Portfolio</a>
+            <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
         </div>
         <div class="tasksHeader"><h2>Tasks</h2></div>
         <table>
