--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
             <a href="https://imblaze.my.site.com/s/">ImBlaze</a> /
-            <a href="https://drive.google.com/drive/u/0/folders/1mgMGFCZ3GzGM6WVZdS1J3kWbnEl_OQT1">Digital Portfolio</a>
+            <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
             </div>
 <!-- SCM Music Player https://www.scmplayer.net -->
 <script type="text/javascript" src="https://www.scmplayer.net/script.js" 
