added '/' to .menu

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -76,7 +76,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <a href="https://masalp.net/Learning%20Plan-%20ToDo.html">To- Do</a> /
             <a href="https://mail.google.com/mail/u/0/#inbox">✉E-mail✉</a> /
             <a href="https://classroom.google.com/?emr=0">Google Classroom</a> /
-            <a href="https://imblaze.my.site.com/s/">ImBlaze</a>
+            <a href="https://imblaze.my.site.com/s/">ImBlaze</a> /
             <a href="https://tinyurl.com/MasaB-HBP2028">Digital Portfolio</a>
         </div>
         <div class="tasksHeader"><h2>Tasks</h2></div>
