update todo list

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -111,6 +111,18 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 			<td>low</td>
 			<td>2025-02-idk</td>
 		</tr>
+        <tr>
+            <td>LC2 Reflection</td>
+            <td>not started</td>
+            <td>high</td>
+            <td>2025-02-21</td>
+        </tr>
+        <tr>
+            <td>Literary Analysis Intro and Conclusion</td>
+            <td>not started</td>
+            <td>high</td>
+            <td>2025-02-28</td>
+        </tr>
         </table>
         <div class="reflectionHeader">
             <h2>Weekly Reflection</h2>
