updating math page

--- a/Learning Plan- Math.html
+++ b/Learning Plan- Math.html
@@ -64,7 +64,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <div class="aboutHeader">
 <h3>About</h3>
                 </div>
-                <p>I want to get to a point where I can talk to Takeshi about math on the same level as him. Now this is not just a goal to get better at math, I am also trying to be better about getting along with Takeshi. Right now, I’m doing tutoring, so I’m already done with the first step. This isn’t a goal that I’m particularly excited about, but I think it is important. I also am getting a lot of homework, so hopefully improvement comes soon.</p>
+                <p>I want to get to a point where I can talk to Takeshi about math on the same level as him. Now this is not just a goal to get better at math, I am also trying to be better about getting along with Takeshi. Right now, I’m doing tutoring, so I’m already done with the first step. This isn’t a goal that I’m particularly excited about, but I think it is important. I also am getting a lot of homework, so hopefully improvement comes soon. I am also aiming to finish my math textbook by the end of this learning cycle, so i'm doing five times thenormal amount of homework.</p>
                 <div class="list"><ul>
                     <li>Tutoring</li>
                     <li>Math</li>
