add contact to lti tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -77,6 +77,16 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Shadow Day</th>
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
+        <tr>
+            <td><a href="https://www.pacengtech.com/">Pacific Engineering Technologies</a></td>
+            <td>Caleb Eriksen</td>
+            <td>Engineering Designer</td>
+            <td>CEriksen@pacengtech.com</td>
+            <td>2025-02-18</td>
+            <td>2025-02-25</td>
+            <td>tbd</td>
+            <td></td>
+        </tr>
 		<tr>
 			<td><a href="https://www.seattle.gov/fire">Seattle Fire Dept.</a></td>
 			<td>idk yet</td>
