added project proposal link to learning plan, and updated lti tracker

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -149,6 +149,8 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
     <li>Code Learning Plan</li>
     <li>Learn Java at Robotics</li>
     <li>idk maybe Rewrite the Tekerz Website?</li>
-</ul></div></div>
+</ul></div>
+<a href="https://docs.google.com/document/d/1X_-st5V7cEbpTvj0Y4QppL3QY0lMc7dEkUqddt5-tGQ/edit?tab=t.0">Project Proposal</a>
+</div>
     </body>
 </html>
