--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -219,7 +219,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <td></td>
         </tr>
         <tr>
-            <td>idk man</td>
+            <td>Department of Defense, Retired</td>
             <td>Olin Jensen</td>
             <td>firefighter</td>
             <td>firedawgr3@yahoo.com</td>
