add entry to to do list

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -134,7 +134,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <div class="date>">
                 <h3>2025-02-21</h3>
             </div>
-            <p>This week, I learned a lot of programming at robotics, and I did lots of tutoring homework. I sent 4 emails to contacts, and I started working on my literary analysis intro and conclusion. I also did my LC2 Reflection.</p>
+            <p>This week, I learned a lot of programming at robotics, and I did lots of tutoring homework. I sent 4 emails to contacts, and I started working on my literary analysis intro and conclusion. I also did my LC2 Reflection. I started brainstorming ideas for my learning plan next learning cycle</p>
 		<div class="date">
 			<h3>2025-02-07</h3>
 		</div>
