update lti tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -77,11 +77,31 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Shadow Day</th>
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
+		<tr>
+			<td></td>
+			<td>Michiko Swiggs</td>
+			<td>Web Dev</td>
+			<td>michiko23@gmail.com</td>
+			<td>2025-02-25</td>
+			<td>tbd</td>
+			<td>tbd</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td>John McRandle</td>
+			<td>Animator</td>
+			<td>johnmcrandle@gmail.com</td>
+			<td>2025-02-25</td>
+			<td>tbd</td>
+			<td>tbd</td>
+			<td></td>
+		</tr>
         <tr>
             <td><a href="https://www.pacengtech.com/">Pacific Engineering Technologies</a></td>
             <td>Caleb Eriksen</td>
             <td>Engineering Designer</td>
-            <td>CEriksen@pacengtech.com</td>
+            <td>ceriksen@pacengtech.com</td>
             <td>2025-02-18</td>
             <td>2025-02-25</td>
             <td>tbd</td>
