update lti tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -78,7 +78,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
 		<tr>
-			<td></td>
+			<td><a href="https://swiggs.com">Michiko Swiggs</a></td>
 			<td>Michiko Swiggs</td>
 			<td>Web Dev</td>
 			<td>michiko23@gmail.com</td>
@@ -90,7 +90,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 		<tr>
 			<td></td>
 			<td>John McRandle</td>
-			<td>Animator</td>
+			<td>Illustrator/Animator</td>
 			<td>johnmcrandle@gmail.com</td>
 			<td>2025-02-25</td>
 			<td>tbd</td>
