--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -88,7 +88,7 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 			<td></td>
 		</tr>
 		<tr>
-			<td></td>
+			<td><a href="https://www.awfulbet.com/">Aufulbet.com</a></td>
 			<td>John McRandle</td>
 			<td>Illustrator/Animator</td>
 			<td>johnmcrandle@gmail.com</td>
