update project for lc3

--- a/Learning Plan- Goals.html
+++ b/Learning Plan- Goals.html
@@ -144,11 +144,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
 </div>
 <div class="about">
     <div class="myProject"><h3>My Project</h3></div>
-    <p>I’ve been wanting to learn to program for a while- Since the beginning of the summer. I thought I would have time, but then the district screwed over our robotics team. Due to the arson at the HVA building, We “had” to move spaces, which is an obvious setback for our FTC teams, because we moved in August, and the season starts in September. Because of this, I wasn’t able to learn to program our robots. I do not think I will be able to be on the programmers team for our FRC team this season, but hopefully I will be able to next season. I want to learn HTML in the meantime, and I’m thinking of turning my Learning Plan into a website. </p>
+    <p>My project this learning cycle is to learn java at robotics, and to keep working on my learning plan. For my learning plan, I have a couple ideas. The first one that I want to implement is adding the screen that needs you to hit space to enter the site. I think another easy one that I can get done pretty quickly is adding the calender to my learning plan. I have started learning Java, I hope to keep learning and to learn more in- depth during the off- season.</p>
 <div class="list"><ul>
     <li>Code Learning Plan</li>
     <li>Learn Java at Robotics</li>
-    <li>idk maybe Rewrite the Tekerz Website?</li>
 </ul></div>
 <a href="https://docs.google.com/document/d/1X_-st5V7cEbpTvj0Y4QppL3QY0lMc7dEkUqddt5-tGQ/edit?tab=t.0">Project Proposal</a>
 </div>
