--- a/Learning Plan- Java.html
+++ b/Learning Plan- Java.html
@@ -65,11 +65,10 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <div class="aboutHeader">
 <h3>About</h3>
                 </div>
-                <p>I’ve been wanting to learn to program for a while- Since the beginning of the summer. I thought I would have time, but then the district screwed over our robotics team. Due to the arson at the HVA building, We “had” to move spaces, which is an obvious setback for our FTC teams, because we moved in August, and the season starts in September. Because of this, I wasn’t able to learn to program our robots. I do not think I will be able to be on the programmers team for our FRC team this season, but hopefully I will be able to next season. I want to learn HTML in the meantime, and I’m thinking of turning my Learning Plan into a website. </p>
+                <p></p>
                 <div class="list"><ul>
-                    <li>Mentor FTC students</li>
                     <li>Participate in First Reefscape</li>
-                    <li>Learn programming</li>
+                    <li>Learn java</li>
                 </ul></div>
             </div>
         </body>
