updated to do list

--- a/Learning Plan- ToDo.html
+++ b/Learning Plan- ToDo.html
@@ -87,17 +87,21 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
                 <th>Priority</th>
                 <th>Due</th>
             </tr>
+            <td>add components to learning plan</td>
+            <td>not started</td>
+            <td>high</td>
+            <td>soon</td>
             <tr>
                 <td>PQQR Math Homework</td>
                 <td>not started</td>
                 <td>low</td>
-                <td>2025-1-24</td>
+                <td>2025-03-10</td>
             </tr>
             <tr>
                 <td>Tutoring Math Homework</td>
                 <td>in progress</td>
                 <td>high</td>
-                <td>2025-01-24</td>
+                <td>2025-03-14</td>
             </tr>
         </table>
         <div class="reflectionHeader">
