updated LTI tracker

--- a/Learning Plan- LTI.html
+++ b/Learning Plan- LTI.html
@@ -77,6 +77,86 @@ data-config="{'skin':'skins/tunes/skin.css','volume':50,'autoplay':false,'shuffl
             <th>Shadow Day</th>
             <th>Notes</th>
         </tr><!--new lti stuff goes in this little pocket below-->
+        <tr>
+            <td>Port of Seattle</td>
+            <td>D. Washington</td>
+            <td>Firefighter</td>
+            <td>Washington.D@portseattle.org</td>
+            <td>2025-03-18</td>
+            <td>tbd</td>
+            <td>tbd</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Port of Seattle</td>
+            <td>J. Schnase</td>
+            <td>Firefighter</td>
+            <td>Schnase.J@portseattle.org</td>
+            <td>2025-03-18</td>
+            <td>tbd</td>
+            <td>tbd</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Bellevue</td>
+            <td>idk</td>
+            <td>Youth Fire Training Program</td>
+            <td>405-452-6892</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Bates Technical College</td>
+            <td>Chris Grant (Fire Supervision Degree)</td>
+            <td>Fire Instructor</td>
+            <td>cgrant@batestech.edu</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Bates Technical College</td>
+            <td>Adam Cabeza</td>
+            <td>Fire Instructor</td>
+            <td>acabeza@batestech.edu</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Bates Technical College</td>
+            <td>Brian Wiwel</td>
+            <td>Fire Instructor</td>
+            <td>bwiwel@batestech.edu</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>PSSC</td>
+            <td>Dan Lawson</td>
+            <td>Youth Fire Instructor</td>
+            <td>daniel.lawson@g.highlineschools.org</td>
+            <td>2025-03-04</td>
+            <td>no</td>
+            <td>no</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Zach</td>
+            <td>Traci's friend</td>
+            <td>firefighter</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
 		<tr>
 			<td><a href="https://swiggs.com">Michiko Swiggs</a></td>
 			<td>Michiko Swiggs</td>
